boot: load sufficient sectors from disk

--- a/doc/6.3.Handling_Interrupts.md
+++ b/doc/6.3.Handling_Interrupts.md
@@ -152,7 +152,38 @@ like mapping the key code to a character. For simplicity we will stick to
 uninterruptible single-block handlers in this tutorial.
 
 
-## 6.3.1 Programmable Interrupt Controller (PIC)
+## 6.3.2 Interlude: linker script
+
+When starting implementing our C kernel, we realized soon enough that compiling
+it with gcc (11.2) [produces a huge binary
+image](https://stackoverflow.com/questions/65037919/minimal-executable-size-now-10x-larger-after-linking-than-2-years-ago-for-tiny)
+(129MB), which bochs seems to refuse for 1.44 MB floppy. The proper solution
+would probably be to switch to multiboot altogether, or use any kind of already
+available bootloader, and build a nicely partitionned filesystem image. Since
+we wanted to concentrate on the kernel rather than the boot process, we came up
+with configuring bochs to boot from disk:
+
+```
+# boschsrc
+ata0-master: type=disk, mode=flat, path="os.img"
+boot: disk
+```
+
+But when starting implementing keyboard interrupts, our kernel started crashing
+inexplicably (`3rd (13) exception with no resolution, shutdown status is 00h,
+resetting`). [An osdev forum
+post](https://forum.osdev.org/viewtopic.php?p=115073&sid=b67fde41216a1f94109184d1d2d1701c#p115073)
+finally made us realize we were loading too few sectors from the disk when
+loading our kernel in `boot/boot_sect.asm`!
+
+Using a linker script solved the issue and now produces a 5.5KB kernel.
+
+> When developing user-space programs, your toolchain ships with default
+> scripts for linking such programs. However, these are unsuitable for kernel
+> development and you need to provide your own customized linker script.
+
+
+## 6.3.3 Programmable Interrupt Controller (PIC)
 
 Not to be confused with [PIC microcontroller](https://en.wikipedia.org/wiki/PIC_microcontroller).
 
