Add hardware interrupts and minimal keyboard handler

--- a/doc/6.3.Handling_Interrupts.md
+++ b/doc/6.3.Handling_Interrupts.md
@@ -1,8 +1,14 @@
 # 6.3 Handling Interrupts
 
 Now we can print things on the screen, we'd like to start interacting with our
-OS by type things on the screen using a keyboard. From the CPU point of view,
+OS by typing things on the screen using a keyboard. From the CPU point of view,
 this is getting *input* from the hardware.
+
+The difficulty in achieving this goal is that we'll need to setup 3 things
+before seeing any result: interrupts, the PIC and the keyboard. We'll start by
+setting up the first two, and then verify our setup by issuing some exception
+in our kernel's `main()` which should print its number on the screen. Later in
+the next chapter we will look into implementing a minimal keyboard driver.
 
 ## 6.3.1 Interrupts
 
@@ -187,7 +193,7 @@ Using a linker script solved the issue and now produces a 5.5KB kernel.
 
 Not to be confused with [PIC microcontroller](https://en.wikipedia.org/wiki/PIC_microcontroller).
 
-To start using hardware interrupts we must first configure the PIC.
+To start using hardware interrupts we must first configure the PIC chips.
 
 > The PIC is one of the most important chips making up the x86
 > architecture. Without it, the x86 architecture would not be an interrupt
@@ -212,13 +218,20 @@ APIC is still backwards compatible so for simplicity we're going to use the PIC
 interface. For initialization, we'll need to do a couple of things.
 
 > In protected mode, the IRQs 0 to 7 conflict with the CPU exception which are
-> reserved by Intel up until 0x1F. (It was an IBM design mistake.)
+> reserved by Intel up until 0x1F. (It was an IBM design mistake.) [^osdev]
 
-So we'll tell the PIC to remap interrupt levels
+So, when initializing the PIC, we need to tell it to remap interrupt
+levels. For example, when IRQ1 is issued, the CPU needs to received as
+IRQ33. The initialization sequence consists of:
 
-```
-TODO PIC
-```
+- set both PICs' vector offsets (ICW2): PIC1 gets 32, PIC2 gets 40.
+- tell PICs how they are wired (ICW3) as they're both link via specific pins.
+- set additional configuration on how the PICs will operate (ICW4).
+
+On IRQ reception, the CPU needs to acknowledge by sending both PICs an
+end-of-interrupt (EOI) signal. IRQs can be enable or disabled using a bitmask.
+Counterintuitively enough, setting a bit for an IRQ level in the mask actually
+*disables* the corresponding IRQ!
 
 
 ## References
