Add reference projects to README

--- a/doc/6.3.Handling_Interrupts.md
+++ b/doc/6.3.Handling_Interrupts.md
@@ -236,8 +236,7 @@ Counterintuitively enough, setting a bit for an IRQ level in the mask actually
 
 ## References
 
-- [^osdev-notes]:
-  [osdev-notes](https://github.com/dreamos82/Osdev-Notes/tree/master/PS2_Keyboard)
+- [^osdev-notes]: [osdev-notes](https://github.com/dreamos82/Osdev-Notes/tree/master/PS2_Keyboard)
 - [^littleosbook]: [littleosbook](https://github.com/littleosbook/littleosbook/blob/master/interrupts.md)
 - [^osdev]: [osdev](https://wiki.osdev.org/)
 - [^so-tss]: https://stackoverflow.com/a/2761422
