--- a/doc/6.4.Keyboard_Driver.md
+++ b/doc/6.4.Keyboard_Driver.md
@@ -62,24 +62,22 @@ event: was it a key press or release, what modifiers were in effect, etc. Other
 application, like the system console or a shell, might only be interested by
 the ascii character or sequence of characters produced. For flexibility and
 clarity we adopted a two-fold translation process:
+
 1. scan code → key code + modifiers, i.e. what key was used. Ex: on a XT US
    keyboard, scancode E0 B6 is `KEY_RSHIFT` released.
 2. key code + modifiers → ascii string. For now we'll only handle the Shift
    modifier. Ex: Shift+`KEY_5` will produce the single character sequence
    `%`.
 
-```
-TODO code
-```
+In terms of code organisation, we isolate these mappings into a separte
+`kbdmapus.c` file. This way, we could easily define and use an alternate
+mapping if needed.
 
-To keep it simple for now, we won't handle leds on the keyboard.
+To keep it simple for now, we won't handle leds on the keyboard, nor caps_lock
+or exotic keys.
 
 Later we will store key events into a circular buffer to be consumed by other
-applications. But for now we'll just print to the screen on "make" codes.
-
-```
-TODO code
-```
+applications. But for now we'll just print "make" codes onto the screen.
 
 Interestingly enough, the linux-0.01 interrupt handler `kernel/keyboard.s` is
 all in assembly code!
