Add stack strace to panic()

--- a/doc/7.1.Building_and_Utilities.md
+++ b/doc/7.1.Building_and_Utilities.md
@@ -1,6 +1,9 @@
 # Interlude: Building and Utilities
 
+TODO
+
 - https://github.com/dreamos82/Osdev-Notes/blob/master/01_Build_Process/02_Overview.md?plain=1#L1
+- https://github.com/josehu07/hux-kernel.wiki/blob/master/05.-Debugging-%26-Testing.md?plain=1#L121
 - https://github.com/mit-pdos/xv6-public/blob/master/console.c#L55
 
 ## References
