Add building and utilities documentation and A20 enabling

--- a/doc/7.1.Building_and_Utilities.md
+++ b/doc/7.1.Building_and_Utilities.md
@@ -1,13 +1,168 @@
 # Interlude: Building and Utilities
 
-TODO
+## Building
 
-- https://github.com/dreamos82/Osdev-Notes/blob/master/01_Build_Process/02_Overview.md?plain=1#L1
-- https://github.com/josehu07/hux-kernel.wiki/blob/master/05.-Debugging-%26-Testing.md?plain=1#L121
-- https://github.com/mit-pdos/xv6-public/blob/master/console.c#L55
+[Osdev-Notes][^osdev-notes] have a couple of important and fascinating notes
+about building our project. Among these is the explanation of using `CFLAGS +=
+-ffreestanding`: We are writing an operating system, not a userspace program
+that's expected to run on a host operating system. Our kernel won't assume any
+dependencies nor any environment (`argc` or `envp`).
+
+This is also why we're using a linker script, to control the shape of our
+binary.
+
+Refer to [Osdev-Notes][^osdev-notes] for the specifics of compiler options.
+
+## Printf
+
+For debugging and treaceability we want to be able to log and print values,
+like integers, pointers, strings or characters. The usual solution is
+`printf`. A full-fledged `printf` that supports many formats is complex. So
+we'll go for a simple implementation borrowed from
+[xv6](https://github.com/mit-pdos/xv6-public/blob/master/console.c#L55). Some
+implmentations prefer to distinguish between the actual formating (`sprintf`)
+and actually printing to the screen.
+
+The code for xv6's `cprintf` is rather straightforward. Interestingly the
+implementation doesn't use `va_list` from `<stdarg.h>` but directly fetches the
+function's arguments from the stack.
+
+Consumers must pay special attention to the size of arguments when using
+`cprintf`: `%x` for a `uint64_t` argument is only going to fetch the first
+`uint32_t` half! So we added a `%l` format which is a shortcut for what should
+be `%ul`.
+
+## Stack trace
+
+We can generate stack trace by unpiling function calls, from the current
+function to the beginning of the stack, by leveraging the calling convention,
+*cdecl* in our case. Remember how a function call happens:
+
+1. the caller pushes arguments to the stack in reverse order
+2. the caller calls the function, usually using the `call` instruction. `call`
+   pushes `eip` to the stack, so the callee can later return, and jumps to the
+   address of the function.
+3. the callee saves `ebp` by pushing it to the stack and sets it with `esp`.
+
+So, inside the callee, without the stack looks like this
+
+```
+|------|-----------|--------|
+| low  |           |        |
+|      |           |        |
+|      | local1    | <- esp |
+|      | saved epb | <- ebp |
+|      | saved eip |        |
+|      | param1    |        |
+|      | param2    |        |
+|      |           |        |
+| high |           |        |
+|------|-----------|--------|
+```
+
+So by design the callee is able to read its return address (saved `eip`), which
+points to the caller's code section.
+
+We don't have yet the exact address of the (beginning of the) caller function
+though. To know that, and utlimately resolve the symbol name, we would use the
+ELF symbol table. A bootloader like GRUB would provide us with a pointer to
+this table. For each stack frame, We would traverse the symbol table, find the
+code section which contains the saved `eip`.
+
+We won't reach that point though as we won't be using any bootloader for
+now. See the details of [the lookup function in
+hux](https://github.com/josehu07/hux-kernel/blob/main/src/common/debug.c#L34).
+We can manually approximate that lookup though using the link map provided in
+`kernel.map` by `ld -M`, which includes the symbol table.
+
+Note the stop condition for traversing the call chain: we initialize ebp to zero.
+
+
+## Debug boot sector in bochs
+
+Bochs stop before booting the machine and we're given the opportunity to to
+debug our bootloader.
+
+```
+lb 0x7c00       # break point at linear address
+p               # proceed; next; step-over
+c               # continue
+x /40hx 0x7c00  # inspect memory
+print-stack     # inspect stack
+```
+
+## Detecting physical memory
+
+In this chapter, we intend to add managing memory using virtual memory. We'll
+implement an allocator for physical pages and enable paging. But the first step
+will be to determine the memory that's available to our kernl. We need a proper
+physical memory map.
+
+Again a bootloader like GRUB would come handy, as it woud provide us with such
+a memory map. Actually we'll just implement memory detection ourselves,
+leveraging a BIOS interrupt: *int 0x15, eax=0xe820*. Actually that's the most
+reliable way to detect memory "on all PCs built since 2002, and on most
+existing PCs before then" [^osdev]. It's also the first method used by
+GRUB. The other ones are:
+
+- BIOS Int 0x15, ax=0xe801 and BIOS Int 0x12
+- BIOS Int 0x15, ah=0x88 and BIOS Int 0x12
+
+The e820 call must be done in real mode! We can directly reuse the assembly
+code example from Osdev. We'll store the memory map structure into an arbitrary
+address (0x8000) and will later pass that address as an argument to our our
+kernel. Is this dangerous? We could store it for example into a fixed sized
+global variable. But in practice we'll only need that information once to
+initialize our physical memory allocator.
+
+As a convention, we'll use a zero entry count in the memory map structure
+(`struct pmem_info`) as an anomaly and thus initialize it to zero in our boot
+sector before calling the e820 function:
+
+```asm
+    mov di, PMEM_ENT
+    mov dword [di], 0           ; Initialize memory map.
+```
+
+## A20 line
+
+Before the 80286, x86 CPUs had only 20 address lines (A0 through A19). Some
+existing programs actually depended on address truncation, the fact that the
+maximum address would wrap to a lower one. To ensure compatibility, IBM
+disabled the A20 line by default. Furthermore,
+
+> Since the 8042 keyboard controller happened to have a spare pin, that was
+> used to control the AND gate that disables this address bit [A20]. [^aeb]
+
+Fascinating historical background can be found in [an osdev forum
+post](https://forum.osdev.org/viewtopic.php?p=281278#p281278), noticeably
+
+> The assumption was that there weren't going to be future 8086 models,
+> something which Intel had basically assured both IBM and Microsoft would be
+> the case.
+
+Detecting and enabling A20 is typically the job of the bootloader, as some of
+the techniques require real mode. Exhaustively detecting and enabling A20 is a
+somewhat involved endeavor [^osdev][^aeb]. A modern OS targetting modern PCs
+should probably support primarily EFI boot anyways which enables A20.
+
+So what are the implications for our hobby OS? It depends on the level of
+support we'd like to provide. We'll probably only test and play on emulators.
+Bochs or qemu do enable A20 at boot. Virtualbox doesn't. All this is
+interesting to test A20-related code: we can disable/enable A20 on bochs and
+virtualbox, for example with BIOS Int 0x15 ax=0x2400, but it's [near to
+impossible on qemu](https://github.com/margaretbloom/disable-a20).
+
+Also our bootloader is almost 512B at this point and adding decent A20 handling
+would require us to switch to a 2-stage bootloader. It thus seems reasonable to
+
+1. attempt to enable A20 with the recommended BIOS Int 0x15, ax=0x2401 method
+2. add a safeguard in the kernel when initializing physical memory management:
+   write different values to 2 addresses which would be the same without A20
+   enabled, such as 0x012345 and 0x112345, then compare their content.
 
 ## References
 
-- [^hux-kernel]: [hux-kernel](https://github.com/josehu07/hux-kernel/wiki/08.-External-Device-Support#programmable-interval-timer-pit)
-- [^osdev]: [osdev](https://wiki.osdev.org/Programmable_Interval_Timer)
-- [^geekgeek]: [geekgeek](https://www.geeksforgeeks.org/understanding-volatile-qualifier-in-c/)
+- [^osdev-notes]: [osdev-notes](https://github.com/dreamos82/Osdev-Notes/blob/master/01_Build_Process/02_Overview.md
+- [^osdev]: [osdev](https://wiki.osdev.org/A20)
+- [^aeb]: [aeb](https://www.win.tue.nl/~aeb/linux/kbd/A20.html)
