Add physical memory management

--- a/doc/7.1.Building_and_Utilities.md
+++ b/doc/7.1.Building_and_Utilities.md
@@ -1,4 +1,4 @@
-# Interlude: Building and Utilities
+# 7.1 Interlude: Building and Utilities
 
 ## Building
 
@@ -161,8 +161,10 @@ would require us to switch to a 2-stage bootloader. It thus seems reasonable to
    write different values to 2 addresses which would be the same without A20
    enabled, such as 0x012345 and 0x112345, then compare their content.
 
+
 ## References
 
 - [^osdev-notes]: [osdev-notes](https://github.com/dreamos82/Osdev-Notes/blob/master/01_Build_Process/02_Overview.md
 - [^osdev]: [osdev](https://wiki.osdev.org/A20)
 - [^aeb]: [aeb](https://www.win.tue.nl/~aeb/linux/kbd/A20.html)
+- Other precious debugging techniques in [hux-kernel](https://github.com/josehu07/hux-kernel.wiki/blob/master/05.-Debugging-%26-Testing.md)
