Add memory management introduction

--- a/doc/7.1.Building_and_Utilities.md
+++ b/doc/7.1.Building_and_Utilities.md
@@ -161,10 +161,30 @@ would require us to switch to a 2-stage bootloader. It thus seems reasonable to
    write different values to 2 addresses which would be the same without A20
    enabled, such as 0x012345 and 0x112345, then compare their content.
 
+## ELF, gdb, QEMU
+
+As explained in the excellent book *Operating Systems from 0 to 1* by Tu Do
+Huang, in the chapter *8.5 Debuggable program on bare metal* [^os0to1], we can
+do a couple of other cool things:
+
+- we can build our kernel in ELF instead of BINARY and put it after the boot
+  sector onto the floppy image file. We only need to tell our bootloader to
+  jump to the ELF entry point! There are a couple of benefits to that:
+  1. our kernel will now be able to read the symbol table and thus display
+     symbols in the stack trace `\o/`
+  2. if we additionally build the binary with debug information, we'll be able
+     to debug live!
+- we can also build our bootloader as an ELF file with debug information, then
+  extract the binary with `objcopy` to put onto the first sector of the floppy,
+  but still use the ELF file to debug the bootloader live!
+
+FIXME TODO
+
 
 ## References
 
-- [^osdev-notes]: [osdev-notes](https://github.com/dreamos82/Osdev-Notes/blob/master/01_Build_Process/02_Overview.md
+- [^osdev-notes]: [osdev-notes](https://github.com/dreamos82/Osdev-Notes/blob/master/01_Build_Process/02_Overview.md)
 - [^osdev]: [osdev](https://wiki.osdev.org/A20)
 - [^aeb]: [aeb](https://www.win.tue.nl/~aeb/linux/kbd/A20.html)
 - Other precious debugging techniques in [hux-kernel](https://github.com/josehu07/hux-kernel.wiki/blob/master/05.-Debugging-%26-Testing.md)
+- [^os0to1]: [os0to1](https://github.com/tuhdo/os01/blob/master/book_src/Operating%20Systems%20From%200%20to%201.txt#L14320)
