--- a/doc/7.2.Physical.Memory.Management.md
+++ b/doc/7.2.Physical.Memory.Management.md
@@ -28,6 +28,10 @@ Going back to the detected memory map
 > adjacent ranges of the same type, change any overlapping areas to the most
 > restrictive type, and change any unrecognised "type" values to type 2. [^osdev]
 
+See for example [the linux for cleaning up the memory
+map](https://github.com/torvalds/linux/blob/f0e18b03fcafd8344539101f564ae358950ae892/arch/x86/kernel/e820.c#L83)
+
+
 Note also the acpi region is reclaimable, i.e. it can be considered free, as
 long as we don't need the ACPI tables stored there.
 
@@ -37,7 +41,7 @@ As of now, our kernel is loaded to memory address 0x1000 and has a size of
 maximum 512*40 bytes: the number of sectors loaded from disk. We could get the
 size of our kernel from a bootloader like GRUB, which is able to load ELF
 binaries. Or we can simply use our LD script `kernel.lds` to track the offsets
-of our kernel start and end:
+of our kernel start and end [^nullprog]:
 
 ```
 /* kernel.lds */
@@ -86,3 +90,7 @@ at 1MiB instead.
 
 - [^sos]: [sos](sos.enix.org/)
 - [^hux-kernel]: [hux-kernel](https://github.com/josehu07/hux-kernel)
+- [^nullprog]: We're very greatful to Chris Wellons for his amazing blog post
+  on [How to build DOS COM files with
+  GCC](https://nullprogram.com/blog/2014/12/09/) which made it explicit that we
+  need to use the *address* of the linker variable!
