Use cross-compiler and better document physical memory

--- a/doc/7.1.Building_and_Utilities.md
+++ b/doc/7.1.Building_and_Utilities.md
@@ -161,6 +161,19 @@ would require us to switch to a 2-stage bootloader. It thus seems reasonable to
    write different values to 2 addresses which would be the same without A20
    enabled, such as 0x012345 and 0x112345, then compare their content.
 
+## Cross-Compiler
+
+Using a cross compiler is a must [^osdev-xcompil]. So far we were able to get
+away with using our Linux platform's gcc and specific compilation and linking
+flags (`CFLAGS+=-m32` and `LDFLAGS+=-melf_i386`). But as we added code,
+specifically for paging (only linking with it, not even including it
+anywhere!), weird things started happening like unexplicable reboots.
+
+Setting up cross-compilation requires some effort but is well-explained
+[^osdev-xcompil]. Arch Linux provides good tooling and indications on [how to
+automate the
+process](https://wiki.archlinux.org/title/Cross-compiling_tools_package_guidelines).
+
 ## ELF, gdb, QEMU
 
 As explained in the excellent book *Operating Systems from 0 to 1* by Tu Do
@@ -185,6 +198,7 @@ FIXME TODO
 
 - [^osdev-notes]: [osdev-notes](https://github.com/dreamos82/Osdev-Notes/blob/master/01_Build_Process/02_Overview.md)
 - [^osdev]: [osdev](https://wiki.osdev.org/A20)
+- [^osdev-xcompil] [osdev-xcompil](https://wiki.osdev.org/Why_do_I_need_a_Cross_Compiler))
 - [^aeb]: [aeb](https://www.win.tue.nl/~aeb/linux/kbd/A20.html)
 - Other precious debugging techniques in [hux-kernel](https://github.com/josehu07/hux-kernel.wiki/blob/master/05.-Debugging-%26-Testing.md)
 - [^os0to1]: [os0to1](https://github.com/tuhdo/os01/blob/master/book_src/Operating%20Systems%20From%200%20to%201.txt#L14320)
