--- a/doc/7.2.Physical_Memory_Management.md
+++ b/doc/7.2.Physical_Memory_Management.md
@@ -1,5 +1,7 @@
 # 7.2 Physical Memory Management
 
+**WIP**
+
 > Many platforms, including x86, use a memory management unit (MMU) to handle
 > translation between the virtual and physical address spaces. [^osdev]
 
@@ -54,8 +56,9 @@ extern char __k_start, __k_end; // use &__k_end !!
 
 We now need to decide how we're going to organize memory for:
 
-- our kernel's own usage, for example to track memory usage → "kernel-reserved"
-- free memory for paging, for user processes → "kernel heap"
+- our kernel's own usage, for example to track memory usage → kernel-reserved
+  "kernel heap"
+- free memory for paging, for user processes
 
 It's not unusual that OSes choose to put paging information, like the frame
 bitmap or the page descriptor array, after the end of the loaded kernel. This
@@ -64,26 +67,31 @@ MiB) [^sos] [^hux-kernel].
 
 We'll also follow that design for now and our memory will look like this:
 
-| Addr            | Stuff                                          |
-|-----------------|------------------------------------------------|
-|                 |                                                |
-| 0x1000          | `__kstart` kernel start                        |
-|                 |                                                |
-| ???             | `__kend` kernel end                            |
-|                 |                                                |
-| 0x5000 (512*40) | max loaded kernel                              |
-|                 |                                                |
-| ??? (0x6000)    | `kheap_curr` start of kernel heap              |
-|                 |                                                |
-| 0x7c00          | boot_sect, can be used and overriden by kernel |
-|                 |                                                |
-| 0x7ffff         | `KHEAP_MAX_ADDR` end of "conventional memory"  |
-|                 |                                                |
-| 0x9f000         | end of first memory region                     |
-|                 |                                                |
+| Addr            | Stuff                                                                                   |
+|-----------------|-----------------------------------------------------------------------------------------|
+|                 |                                                                                         |
+| 0x1000          | `__kstart` kernel start                                                                 |
+|                 |                                                                                         |
+| ???             | `__kend` kernel end                                                                     |
+|                 |                                                                                         |
+| 0x5000 (512*40) | max loaded kernel                                                                       |
+|                 |                                                                                         |
+| ??? (0x6000)    | `kheap_curr` start of kernel heap                                                       |
+|                 |                                                                                         |
+| 0x7c00          | boot_sect, can be used and overriden by kernel                                          |
+|                 |                                                                                         |
+| 0x8000          | PMEM_ENT memory map                                                                     |
+|                 |                                                                                         |
+| 0x7ffff         | `KHEAP_MAX_ADDR` end of "conventional memory"                                           |
+|                 |                                                                                         |
+| 0x90000         | stack end, after switch_to_pm FIXME where should the stack go when switching to paging? |
+|                 |                                                                                         |
+| 0x9f000         | end of first memory region                                                              |
+|                 |                                                                                         |
 
-Maybe later, to give our kernel some working space, we'll start the kernel heap
-at 1MiB instead.
+TODO Maybe later, to give our kernel some working space, we'll start the kernel
+heap at 1MiB instead. Actually, maybe we must do this if we want our kernel
+identity-mapped?
 
 
 ## References
