Switch to 2-stage bootloader

--- a/doc/7.1.Building_and_Utilities.md
+++ b/doc/7.1.Building_and_Utilities.md
@@ -88,6 +88,7 @@ lb 0x7c00       # break point at linear address
 p               # proceed; next; step-over
 c               # continue
 x /40hx 0x7c00  # inspect memory
+info gdt        # inspect GDT
 print-stack     # inspect stack
 ```
 
