--- a/doc/7.2.Physical_Memory_Management.md
+++ b/doc/7.2.Physical_Memory_Management.md
@@ -67,27 +67,29 @@ MiB) [^sos] [^hux-kernel].
 
 We'll also follow that design for now and our memory will look like this:
 
-| Addr            | Stuff                                                                                   |
-|-----------------|-----------------------------------------------------------------------------------------|
-|                 |                                                                                         |
-| 0x1000          | `__kstart` kernel start                                                                 |
-|                 |                                                                                         |
-| ???             | `__kend` kernel end                                                                     |
-|                 |                                                                                         |
-| 0x5000 (512*40) | max loaded kernel                                                                       |
-|                 |                                                                                         |
-| ??? (0x6000)    | `kheap_curr` start of kernel heap                                                       |
-|                 |                                                                                         |
-| 0x7c00          | boot_sect, can be used and overriden by kernel                                          |
-|                 |                                                                                         |
-| 0x8000          | PMEM_ENT memory map                                                                     |
-|                 |                                                                                         |
-| 0x7ffff         | `KHEAP_MAX_ADDR` end of "conventional memory"                                           |
-|                 |                                                                                         |
-| 0x90000         | stack end, after switch_to_pm FIXME where should the stack go when switching to paging? |
-|                 |                                                                                         |
-| 0x9f000         | end of first memory region                                                              |
-|                 |                                                                                         |
+| Addr            | Stuff                                                                                                  |
+|-----------------|--------------------------------------------------------------------------------------------------------|
+|                 |                                                                                                        |
+| 0x1000          | `__kstart` kernel start                                                                                |
+|                 |                                                                                                        |
+| ???             | `__kend` kernel end                                                                                    |
+|                 |                                                                                                        |
+| 0x5000 (512*40) | max loaded kernel                                                                                      |
+|                 |                                                                                                        |
+| ??? (0x6000)    | `kheap_curr` start of kernel heap                                                                      |
+|                 |                                                                                                        |
+| 0x7c00          | bootloader stage1, can be used and overriden by kernel. Stack before protected mode grows from here ↑  |
+|                 |                                                                                                        |
+| 0x7e00          | bootloader stage2, can be used and overriden by kernel                                                 |
+|                 |                                                                                                        |
+| 0xA000          | PMEM_ENT memory map                                                                                    |
+|                 |                                                                                                        |
+| 0x7ffff         | `KHEAP_MAX_ADDR` end of "conventional memory"                                                          |
+|                 |                                                                                                        |
+| 0x90000         | Stack after protected mode grows from here ↑ FIXME where should the stack go when switching to paging? |
+|                 |                                                                                                        |
+| 0x9f000         | end of first memory region                                                                             |
+|                 |                                                                                                        |
 
 TODO Maybe later, to give our kernel some working space, we'll start the kernel
 heap at 1MiB instead. Actually, maybe we must do this if we want our kernel
