Load kernel to extended memory

--- a/doc/7.2.Physical_Memory_Management.md
+++ b/doc/7.2.Physical_Memory_Management.md
@@ -37,17 +37,19 @@ map](https://github.com/torvalds/linux/blob/f0e18b03fcafd8344539101f564ae358950a
 Note also the acpi region is reclaimable, i.e. it can be considered free, as
 long as we don't need the ACPI tables stored there.
 
-For simplicity, we'll only use the extended memory above 1MB, i.e. starting at 0x100000.
+For simplicity, we'll only use the region of extended memory above 1MB,
+i.e. starting at 0x100000.
 
-As of now, our kernel is loaded to memory address 0x1000 and has a size of
-maximum 512*40 bytes: the number of sectors loaded from disk. We could get the
+Our kernel is loaded to memory address 0x1000, before being copied to high
+memory 0x100000. For now, we load the kernel in a single chunk of maximum
+512*40 bytes, 40 being the number of sectors loaded from disk. We could get the
 size of our kernel from a bootloader like GRUB, which is able to load ELF
 binaries. Or we can simply use our LD script `kernel.lds` to track the offsets
 of our kernel start and end [^nullprog]:
 
 ```
 /* kernel.lds */
-    . = 0x1000;
+    . = 0x100000;
     __k_start = .;
 
 /* in C code */
@@ -67,33 +69,40 @@ MiB) [^sos] [^hux-kernel].
 
 We'll also follow that design for now and our memory will look like this:
 
-| Addr            | Stuff                                                                                                  |
-|-----------------|--------------------------------------------------------------------------------------------------------|
-|                 |                                                                                                        |
-| 0x1000          | `__kstart` kernel start                                                                                |
-|                 |                                                                                                        |
-| ???             | `__kend` kernel end                                                                                    |
-|                 |                                                                                                        |
-| 0x5000 (512*40) | max loaded kernel                                                                                      |
-|                 |                                                                                                        |
-| ??? (0x6000)    | `kheap_curr` start of kernel heap                                                                      |
-|                 |                                                                                                        |
-| 0x7c00          | bootloader stage1, can be used and overriden by kernel. Stack before protected mode grows from here ↑  |
-|                 |                                                                                                        |
-| 0x7e00          | bootloader stage2, can be used and overriden by kernel                                                 |
-|                 |                                                                                                        |
-| 0xA000          | PMEM_ENT memory map                                                                                    |
-|                 |                                                                                                        |
-| 0x7ffff         | `KHEAP_MAX_ADDR` end of "conventional memory"                                                          |
-|                 |                                                                                                        |
-| 0x90000         | Stack after protected mode grows from here ↑ FIXME where should the stack go when switching to paging? |
-|                 |                                                                                                        |
-| 0x9f000         | end of first memory region                                                                             |
-|                 |                                                                                                        |
+| Addr            | Stuff                                                                             |
+|-----------------|-----------------------------------------------------------------------------------|
+|                 |                                                                                   |
+| 0x1000          | 4. `KERNEL_OFFSET1`, stage2 buffer start to copy kernel to high memory            |
+|                 |                                                                                   |
+| 0x5000 (512*40) | 4. stage2 buffer end                                                              |
+|                 |                                                                                   |
+| 0x7c00          | 1. bootloader stage1, can be overriden by kernel. Stack end before protected mode |
+|                 |                                                                                   |
+| 0x7e00          | 2. bootloader stage2, can be overriden by kernel                                  |
+|                 |                                                                                   |
+| 0x81ff          | 2. bootloader stage2 end                                                          |
+|                 |                                                                                   |
+| 0xA000          | 3. `MEM_MAP` memory map                                                           |
+|                 |                                                                                   |
+| 0x90000         | 5. Stack end after protected mode                                                 |
+|                 |                                                                                   |
+| 0x9f000         | end of first memory region                                                        |
+|                 |                                                                                   |
+| 0x100000        | 6. `KERNEL_OFFSET2`, `__kstart` kernel start                                      |
+|                 |                                                                                   |
+| ???             | 6. `__kend` kernel end                                                            |
+|                 |                                                                                   |
+| ??? (0x105000)  | 6. `kheap_curr` start of kernel heap                                              |
+|                 |                                                                                   |
+| 0x800000        | 6. `KHEAP_MAX_ADDR`                                                               |
+|                 |                                                                                   |
 
-TODO Maybe later, to give our kernel some working space, we'll start the kernel
-heap at 1MiB instead. Actually, maybe we must do this if we want our kernel
-identity-mapped?
+It is critical to understand the physical memory layout, during and after the
+bootloader process, as it's easy to make mistakes in design choices that lead
+to various hard-to-debug issues, like not loading enough of the bootloader or
+the kernel, overriding code region while loading, stack clashing with kernel
+code, etc.
+
 
 
 ## References
